--- a/u5conditionals/conditionals.html
+++ b/u5conditionals/conditionals.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Lessons of Unit 5 (conditionals)</h1>
     <ul>
-        <li><a href="filler.html">Lesson 1</a></li>
+        <li><a href="../filler.html">Lesson 1</a></li>
         <li><a href="Lesson 2/if.html">Lesson 2: "If"</a></li>
-        <li><a href="filler.html">Lesson 3</a></li>
+        <li><a href="../filler.html">Lesson 3</a></li>
         <li><a href="Lesson 4/elseif.html">Lesson 4: "Else If and Else"</a></li>
         <li><a href="Lesson 5/nestcond.html">Lesson 5: Nested Conditionals</a></li>
     </ul>
