--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSPrinciples</title>
+    <title>csPrinciples</title>
 </head>
 <body>
-    <h1>CS Principles Lesson Directory</h1>
+    <h1>csPrinciples Lesson Directory</h1>
     <ul>
-        <li>
-            <a href="/u5conditionals/conditionals.html">Unit 5: Conditionals</a>
-        </li>
+        <li><a href="/u5conditionals/conditionals.html">Unit 5: Conditionals</a></li>
+        <li><a href="u6functions/functions.html">Unit 6: Functions</a></li>
     </ul>
 </body>
 </html>
