--- a/u6functions/functions.html
+++ b/u6functions/functions.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="../filler.html">Lesson 1</a></li>
         <li><a href="Lesson 2/arguments.html">Lesson 2: Arguments and Parameters</a></li>
+        <li><a href="finMinProj/finMinProj.html">Final Mini-Project</a></li>
     </ul>
 </body>
 </html>
